welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: reassignment to val
  n = Math.abs(n)
    ^nearHundred:3: error: type mismatch;
 found   : Int(100)
 required: Boolean
  return (10 < n < 100) || (n == 200)
                   ^