welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n = Math.abs(n)
  return (10 < n < 100) || (n == 200)
}